--- a/lab-06.html
+++ b/lab-06.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Xiangyu hu" />
 
-<meta name="date" content="2023-11-02" />
+<meta name="date" content="2023-11-03" />
 
 <title>Lab 06 - Functions and iterations</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Lab 06 - Functions and iterations</h1>
 <h4 class="author">Xiangyu hu</h4>
-<h4 class="date">2023-11-02</h4>
+<h4 class="date">2023-11-03</h4>
 
 </div>
 
@@ -450,23 +450,23 @@ code</em></p>
 <pre class="r"><code># Write gmean() command
 gmean &lt;- function(x){
   sum_lnx &lt;- sum(log(x))
-  x_g &lt;- exp(sum_lnx/length(x))
+  x_g &lt;- exp(mean(sum_lnx))
   return(x_g)
 }</code></pre>
 </div>
 <div id="exercise-5" class="section level2">
 <h2>Exercise 5</h2>
-<pre class="r"><code>#test_data &lt;- list(
-  #test1 = c(2.1, 3.8, 4.2),
-  #test2 = c(1, 10, 100, 1000),
-  #test3 = c(0, 1, 4),
-  #test4 = c(0.38,  0.94, -1.56),
-  #test5 = c(TRUE, TRUE),
-  #test6 = c(&quot;6&quot;, &#39;7&#39;, &quot;8&quot;)
-#)
+<pre class="r"><code>test_data &lt;- list(
+  test1 = c(2.1, 3.8, 4.2),
+  test2 = c(1, 10, 100, 1000),
+  test3 = c(0, 1, 4),
+  test4 = c(0.38,  0.94, -1.56),
+  test5 = c(TRUE, TRUE),
+  test6 = c(&quot;6&quot;, &#39;7&#39;, &quot;8&quot;)
+)
 
 
-# Create for loop to test gmean() on the above examples
+ #Create for loop to test gmean() on the above examples
 #for(i in test_data){
   #print(gmean(i))
 #}</code></pre>
@@ -486,28 +486,83 @@ gmean &lt;- function(x){
 
 
 
-# Copy your code from Ex 5 to test your new command</code></pre>
+# Copy your code from Ex 5 to test your new command
+test_data &lt;- list(
+  test1 = c(2.1, 3.8, 4.2),
+  test2 = c(1, 10, 100, 1000),
+  test3 = c(0, 1, 4),
+  test4 = c(0.38,  0.94, -1.56),
+  test5 = c(TRUE, TRUE),
+  test6 = c(&quot;6&quot;, &#39;7&#39;, &quot;8&quot;)
+)
+#for(i in test_data){
+  #print(gmean(i))
+#}</code></pre>
 </div>
 <div id="exercise-7" class="section level2">
 <h2>Exercise 7</h2>
 <pre class="r"><code># Overall table_mm geometic mean?
-
-
-
-
-
-
-# table_mm geometic mean within each clarity category</code></pre>
+diamonds %&gt;%
+  filter(depth_pct != 0,
+         table_pct != 0,
+         length_mm != 0,
+         width_mm != 0,
+         depth_mm != 0) %&gt;%
+  mutate(table_mm = table_pct * width_mm / 100) %&gt;%
+  summarise(gmean(table_mm))</code></pre>
+<pre><code>## # A tibble: 1 × 1
+##   `gmean(table_mm)`
+##               &lt;dbl&gt;
+## 1              3.23</code></pre>
+<pre class="r"><code># table_mm geometic mean within each clarity category
+diamonds %&gt;%
+  filter(depth_pct != 0,
+         table_pct != 0,
+         length_mm != 0,
+         width_mm != 0,
+         depth_mm != 0) %&gt;%
+  mutate(table_mm = table_pct * width_mm / 100) %&gt;%
+  group_by(clarity) %&gt;%
+  summarise(gmean(table_mm))</code></pre>
+<pre><code>## # A tibble: 8 × 2
+##   clarity `gmean(table_mm)`
+##   &lt;ord&gt;               &lt;dbl&gt;
+## 1 I1                   3.86
+## 2 SI2                  3.65
+## 3 SI1                  3.34
+## 4 VS2                  3.19
+## 5 VS1                  3.14
+## 6 VVS2                 2.93
+## 7 VVS1                 2.79
+## 8 IF                   2.78</code></pre>
 <p><em>Add your comment here</em></p>
 </div>
 <div id="exercise-8-optional" class="section level2">
 <h2>Exercise 8 (optional)</h2>
 <pre class="r"><code># Create gmean2() that computes the geometric mean 
-#   that uses the original definition</code></pre>
+#   that uses the original definition
+gmean2 &lt;- function(x){
+  g_2 = prod(x)^(1/length(x))
+  return(g_2)
+}
+test_data &lt;- list(
+  test1 = c(2.1, 3.8, 4.2),
+  test2 = c(1, 10, 100, 1000),
+  test3 = c(0, 1, 4),
+  test4 = c(0.38,  0.94, -1.56),
+  test5 = c(TRUE, TRUE),
+  test6 = c(&quot;6&quot;, &#39;7&#39;, &quot;8&quot;)
+)
+#for(i in test_data){
+  #print(gmean2(i))
+#}</code></pre>
 </div>
 <div id="exercise-9-optional" class="section level2">
 <h2>Exercise 9 (optional)</h2>
-<pre class="r"><code># Create a function that computes the harmonic mean</code></pre>
+<pre class="r"><code># Create a function that computes the harmonic mean
+hmean &lt;- function(x){
+  
+}</code></pre>
 </div>
 
 
